[package]
name = "sloppyc"
version = "0.0.0"
edition = "2021"
description = "Compiler extraction for Sloppy runtime artifacts."
license = "Apache-2.0"
publish = false

[dependencies]
oxc_allocator = "0.128.0"
oxc_ast = "0.128.0"
oxc_parser = "0.128.0"
oxc_span = "0.128.0"
serde_json = "1.0"
sha2 = "0.10"
